<resources>
    <string name="app_name">LabsInspector</string>
    <string name="bottom_navigation_all_labs">Все лабораторные</string>
    <string name="bottom_navigation_subject">Предметы</string>
    <string name="bottom_navigation_search">Поиск</string>
    <string name="bottom_navigation_profile">Профиль</string>
    <string name="toolbar_title">LabsInspector Beta</string>
    <string name="toolbar_menu_info">О нас</string>
    <string name="slash">/</string>
    <string name="average_rating">Средняя оценка</string>
    <string name="sum_of_all_points">Сумма баллов</string>
    <string name="menu_item_edit">Изменить</string>
    <string name="menu_item_delete">Удалить</string>
</resources>
