<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_all_labs"
        android:enabled="true"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/bottom_navigation_all_labs"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_subject"
        android:enabled="true"
        android:icon="@drawable/ic_library_add_black_24dp"
        android:title="@string/bottom_navigation_subject"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_navigation_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom"/>

</menu>